[gd_scene load_steps=5 format=3 uid="uid://bj3n062qosaxj"]

[ext_resource type="Script" uid="uid://dmjnupdhe33f0" path="res://scripts/fall_block.gd" id="1_tpivu"]
[ext_resource type="Texture2D" uid="uid://b6pd12q3f4hin" path="res://assets/sprites/whitetile.png" id="1_wb5dw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpivu"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_86l2j"]
size = Vector2(16, 2)

[node name="FallBlock" type="RigidBody2D"]
can_sleep = false
freeze = true
script = ExtResource("1_tpivu")
time_to_fall = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wb5dw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tpivu")
one_way_collision = true

[node name="FallTimer" type="Timer" parent="."]
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="StepDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepDetector"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_86l2j")
debug_color = Color(0.69406, 0.443941, 0.591528, 0.42)

[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="area_entered" from="StepDetector" to="." method="_on_step_detector_area_entered"]
[connection signal="body_entered" from="StepDetector" to="." method="_on_step_detector_body_entered"]
